actually working with measurmens part 1

--- a/lab1RETRY/lab1RETRY.vcxproj
+++ b/lab1RETRY/lab1RETRY.vcxproj
@@ -81,6 +81,7 @@
     <CudaCompile Include="lodepng.cu" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="goji.png" />
     <Image Include="inputFILE.png" />
   </ItemGroup>
   <ItemGroup>
