--- a/Pool/Pool.vcxproj
+++ b/Pool/Pool.vcxproj
@@ -77,7 +77,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="pkernel.cu" />
     <CudaCompile Include="lodepng.cu" />
   </ItemGroup>
   <ItemGroup>
